# grug-bench

./: .gitignore  CMakeLists.txt  README.md  bench.c  bench.h  main.c  main.h  makefile  mod_api.json  nbody.c  smoketest.c  user
.github/workflows/: build.yml
mods/bench/: basic-Bench.grug  fib-FibBench.grug  light-Particle.grug  simple-Compile.grug
